# mutation-gate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: allowlist.jsonl  pre-commit
mutation_gate/: __init__.py  __main__.py  gate.py
tests/: test_scoping.py
